# traktor-kontrol-x1-mk1-usb-midi

./: README.md  kontrol_x1_mk1.py  main.py  midi_read.py  midi_write.py  mido_send.py  pyproject.toml
